--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image, Video, and Audio Compression</title>
+    <title>Image, Video, and Audio Compression Algorima DCT (Discrete Cosine Transform)</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <!-- Custom styles -->
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="mt-5">Image, Video, and Audio Compression</h1>
+      <h1 class="mt-5">Image, Video, and Audio Compression Algorima DCT (Discrete Cosine Transform)</h1>
 
       <div class="mt-5">
         <h2>Upload Image</h2>
@@ -49,7 +49,7 @@
         <h2>Upload Audio</h2>
         <div class="input-group mb-3">
           <div class="custom-file">
-            <input type="file" class="custom-file-input" id="audioInput" />
+            <input type="file" class="custom-file-input" id="audioInput" accept="audio/*" />
             <label class="custom-file-label" for="audioInput">Choose file</label>
           </div>
           <div class="input-group-append">
